Fix OpenSong download button and prevent menu overlap with #bottom element

--- a/style.css
+++ b/style.css
@@ -755,6 +755,7 @@ top:0px;
 background:linear-gradient(to bottom, rgb(255, 255, 255), rgba(250, 245, 240,1));
 border-bottom:solid 1px #ccc;
 box-shadow: 0px 1px 5px #888888;
+z-index: 100;
 }
 #bottom2 {
 position:fixed;
